Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-12-20 (SVN):
    * screen.c, gl_screen.c (SCR_DrawCenterString, Bottom_Plaque_Draw,
      Info_Plaque_Draw, Plaque_Draw): Adjusted the y coordinate by adding
      ((vid.height-200)>>1) and replaced all occurences of M_Print2() by
      M_Print() and M_DrawTextBox2() by M_DrawTextBox().
    * menu.c: Removed M_DrawTextBox2, M_Print2 and M_DrawCharacter2().
    * menu.h: Removed prototypes for M_DrawTextBox2() and M_Print2().
      Removed m_activenet, MNET_IPX and MNET_TCP which had never existed.

2011-12-20 (SVN):
    * gl_screen.c (SCR_ScreenShot_f): Calculate the buffer size only once.
    * screen.c (WritePCXfile): Changed to return int, -1 on error and 0 on
      success. Made SCR_ScreenShot_f to print its message only on success.

2011-12-20 (SVN):
    * screen.c, gl_screen.c (SCR_DrawCenterString, Bottom_Plaque_Draw,
      Info_Plaque_Draw, Plaque_Draw): Store the (EndC[i]-StartC[i]) result
      in an extra variable.

2011-12-20 (SVN):
    * screen.c, gl_screen.c (UpdateInfoMessage): Changed newmessage to be
      const. Replaced strcat by q_strlcpy to be on the safe side.

2011-12-20 (SVN):
    * screen.c, gl_screen.c: Whitespace tidy up. Removed extra parentheses
      from a few places where they aren't necessary at all.

2011-12-20 (SVN):
    * cmd.c (Cmd_Alias_f): Replaced a strcat by q_strlcat (was a typo.)
    * hexenworld, CL_Disconnect(): Adjusted buffer pointer.
    * quakedef.h: updated beta date stamp to 2011-12-20.

2011-12-18 (SVN):
    * in_svgalib.c: Added missing cameramode and idealroll handling to the
      mouse code.

2011-12-18 (SVN):
    * quakeinc.h, qwsvinc.h: Tweaked order of engine header includes.
    * net_win.c, net_dos.c: Fixed a typo in #endif comments.
    * quakedef.h: updated beta date stamp to 2011-12-18.

2011-12-17 (SVN):
    * Added AUTHORS file among the documents listing all of our contributors